--- a/src/consult_3.html
+++ b/src/consult_3.html
@@ -129,7 +129,174 @@
                     </div>
 
                     <div class="consult__doctors">
-                        <h2>Варианты для записи на понедельник, 24 ноября</h2>
+                        <h3>Варианты для записи на понедельник, 24 ноября</h3>
+                        <div class="doc-time">
+                            <div class="doc-time__info-block">
+                                <div class="doc-time__image"><img src="images/content/doctors/img_1.jpg" srcset="images/content/doctors/img_1@2x.jpg 2x" alt=""></div>
+                                <div class="doc-time__info">
+                                    <p class="doc-time__name">Гринжола<br> Елена Николаевна</p>
+                                    <p class="doc-time__place">Руководитель ОКДЛ-врач клинический лабораторной диагностики</p>
+                                    <p class="doc-time__location">
+                                        <svg class="icon">
+                                            <use xlink:href="#pin"></use>
+                                        </svg>
+                                        Петроградский р-н
+                                    </p>
+                                    <p class="doc-time__feature">
+                                        <svg class="icon">
+                                            <use xlink:href="#star"></use>
+                                        </svg>
+                                        Врач высшей категории, 12 лет стаж
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="doc-time__time-block">
+                                <h6>Выберите время приема</h6>
+                                <ul class="doc-time__time-list">
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="time" value="1">
+                                            <span class="doc-time__time-text">12:00</span>
+                                        </label>
+                                    </li>
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="time" value="2">
+                                            <span class="doc-time__time-text">13:00</span>
+                                        </label>
+                                    </li>
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="time" value="3">
+                                            <span class="doc-time__time-text">14:00</span>
+                                        </label>
+                                    </li>
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="time" value="4">
+                                            <span class="doc-time__time-text">15:00</span>
+                                        </label>
+                                    </li>
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="time" value="5">
+                                            <span class="doc-time__time-text">16:00</span>
+                                        </label>
+                                    </li>
+                                </ul>
+                                <h6>Выберите время дня</h6>
+                                <ul class="doc-time__time-list">
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="period" value="1">
+                                            <span class="doc-time__time-text">Утро</span>
+                                        </label>
+                                    </li>
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="period" value="2">
+                                            <span class="doc-time__time-text">День</span>
+                                        </label>
+                                    </li>
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="period" value="3">
+                                            <span class="doc-time__time-text">Вечер</span>
+                                        </label>
+                                    </li>
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="period" value="4">
+                                            <span class="doc-time__time-text">Любое</span>
+                                        </label>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <h3>Варианты для записи на понедельник, 24 ноября</h3>
+                        <div class="doc-time">
+                            <div class="doc-time__info-block">
+                                <div class="doc-time__image"><img src="images/content/doctors/img_1.jpg" srcset="images/content/doctors/img_1@2x.jpg 2x" alt=""></div>
+                                <div class="doc-time__info">
+                                    <p class="doc-time__name">Гринжола<br> Елена Николаевна</p>
+                                    <p class="doc-time__place">Руководитель ОКДЛ-врач клинический лабораторной диагностики</p>
+                                    <p class="doc-time__location">
+                                        <svg class="icon">
+                                            <use xlink:href="#pin"></use>
+                                        </svg>
+                                        Петроградский р-н
+                                    </p>
+                                    <p class="doc-time__feature">
+                                        <svg class="icon">
+                                            <use xlink:href="#star"></use>
+                                        </svg>
+                                        Врач высшей категории, 12 лет стаж
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="doc-time__time-block">
+                                <h6>Выберите время приема</h6>
+                                <ul class="doc-time__time-list">
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="time" value="1">
+                                            <span class="doc-time__time-text">12:00</span>
+                                        </label>
+                                    </li>
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="time" value="2">
+                                            <span class="doc-time__time-text">13:00</span>
+                                        </label>
+                                    </li>
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="time" value="3">
+                                            <span class="doc-time__time-text">14:00</span>
+                                        </label>
+                                    </li>
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="time" value="4">
+                                            <span class="doc-time__time-text">15:00</span>
+                                        </label>
+                                    </li>
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="time" value="5">
+                                            <span class="doc-time__time-text">16:00</span>
+                                        </label>
+                                    </li>
+                                </ul>
+                                <h6>Выберите время дня</h6>
+                                <ul class="doc-time__time-list">
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="period" value="1">
+                                            <span class="doc-time__time-text">Утро</span>
+                                        </label>
+                                    </li>
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="period" value="2">
+                                            <span class="doc-time__time-text">День</span>
+                                        </label>
+                                    </li>
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="period" value="3">
+                                            <span class="doc-time__time-text">Вечер</span>
+                                        </label>
+                                    </li>
+                                    <li class="doc-time__time-list-item">
+                                        <label class="doc-time__time-radio">
+                                            <input type="radio" name="period" value="4">
+                                            <span class="doc-time__time-text">Любое</span>
+                                        </label>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
 
                     <p class="text-center">
