--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,8 @@
 
         <li><a href="consult_4.html" target="_blank">Запись на консультацию - 4 шаг</a></li>
 
+        <li><a href="lab.html" target="_blank">Аккредитованная испытательная лаборатория</a></li>
+
         <li><a href="text.html" target="_blank">Текстовая</a></li>
     </ol>
 </body>
