--- a/src/main.html
+++ b/src/main.html
@@ -602,7 +602,7 @@
             </ul>
 
             <p class="more-block">
-                <a class="more-block__link" href="#">
+                <a class="more-link" href="#">
                     Все новости
                     <svg class="icon">
                         <use xlink:href="#arrow_right"></use>
