--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,14 @@
 
         <li><a href="lab.html" target="_blank">Аккредитованная испытательная лаборатория</a></li>
 
+        <li><a href="lab_2.html" target="_blank">Услуги</a></li>
+
+        <li><a href="lab_3.html" target="_blank">Производственный контроль</a></li>
+
+        <li><a href="lab_5.html" target="_blank">Все отзывы</a></li>
+
+        <li><a href="lab_6.html" target="_blank">Методы отбора</a></li>
+
         <li><a href="text.html" target="_blank">Текстовая</a></li>
     </ol>
 </body>
