--- a/src/lab_2.html
+++ b/src/lab_2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-    <title>Аккредитованная испытательная лаборатория</title>
+    <title>Услуги</title>
 
     <meta name="description" content="">
 
@@ -30,60 +30,57 @@
 
     <main class="page-content">
         <div class="container">
-            <h1>Аккредитованная испытательная лаборатория</h1>
-
-            <div class="intro">
-                <div class="intro__block"><img src="images/content/lab/img_1.jpg" srcset="images/content/lab/img_1@2x.jpg 2x" alt=""></div>
-                <div class="intro__block">
-                    <h2>О лаборатории</h2>
-                    <p>Испытательная лаборатория была организована в августе 2016г. в качестве структурного подразделения акционерного общества «Северо-Западный центр доказательной медицины». В 2017 году лаборатория успешно прошла процедуру
-                        аккредитации в Национальной системе аккредитации на соответствие требованиям ГОСТ 17025-2009 «Общие требования к компетентности испытательных и калибровочных лабораторий», что подтверждается аттестатом аккредитации
-                        №RA.RU.21AP39 от 30.11.2017.</p>
-                    <div class="consultation">
-                        <div class="consultation__block">
-                            <p class="consultation__title">Заказать исследование</p>
-                            <p>Связь с менеджером</p>
-                        </div>
-                        <div class="consultation__block consultation__form">
-                            <button class="button button--type_1 button--height_3" type="button">Заказать</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="certificate">
-                <div class="certificate__image"><img src="images/content/lab/img_2.jpg" srcset="images/content/lab/img_2@2x.jpg 2x" alt=""></div>
-                <div class="certificate__text-block">
-                    <h2>Аттестат аккредитации</h2>
-                    <p>Аккредитация испытательной лаборатории СЗЦДМ является официальным признанием Росаккредитацией технической грамотности лаборатории в заявленных сферах деятельности.</p>
-                    <a class="button button--height_4 button--type_5" href="#">
-                        <span>Области аккредитации</span>
-                        <svg class="icon">
-                            <use xlink:href="#download"></use>
-                        </svg>
-                    </a>
-                </div>
-            </div>
-
-            <h2>Наши преимущества</h2>
+            <h1>Услуги</h1>
 
             <ul class="tiles">
-                <li class="tiles__item tiles__item--type_2">
-                    <a class="tile-link tile-link--type_1 tile-link--color_1" href="#">
-                        <img class="tile-link__icon" width="64" height="64" src="images/content/lab/icon_1.svg" alt="">
-                        <span class="tile-link__title">Широкая область аккредитации</span>
+                <li class="tiles__item">
+                    <a class="tile-link tile-link--color_4 tile-link--type_1" href="#">
+                        <span class="tile-link__title">Санитарно-бактериологические исследования объектов окружающей среды</span>
+                        <span class="tile-link__text">
+                            • Вода централизованных систем питьевого водоснабжения, питьевая вода из ёмкостей, вода из скважин, вода горячего водоснабжения, вода плавательных бассейнов и аквапарков, вода поверхностных водных объектов;<br>
+                            • Смывы с поверхностей и рук персонала ЛПУ;<br>
+                            • Воздушная среда помещений;<br>
+                            • Стерильность изделий медицинского назначения и лекарственных форм;<br>
+                            • Микробиологическая чистота аптечных форм;<br>
+                            • Бактериологический контроль стерилизационной техники;<br>
+                            • Антимикробная оценка эффективности дезинфекционных средств;
+                        </span>
+                        <span class="tile-link__button-block">
+                            <span class="button button--type_1 button--height_1">Заказать</span>
+                        </span>
                     </a>
                 </li>
-                <li class="tiles__item tiles__item--type_2">
-                    <a class="tile-link tile-link--type_1 tile-link--color_2" href="#">
-                        <img class="tile-link__icon" width="64" height="64" src="images/content/lab/icon_2.svg" alt="">
-                        <span class="tile-link__title">Выполнение исследований<br> в короткие сроки</span>
+                <li class="tiles__item">
+                    <a class="tile-link tile-link--color_4 tile-link--type_1" href="#">
+                        <span class="tile-link__title">Санитарно-химические исследования объектов окружающей среды:</span>
+                        <span class="tile-link__text">
+                            • Вода централизованных систем питьевого водоснабжения, питьевая вода из ёмкостей, вода из скважин, вода горячего водоснабжения, вода плавательных бассейнов и аквапарков, вода поверхностных водных объектов;<br>
+                            • Пищевые продукты.
+                        </span>
+                        <span class="tile-link__button-block">
+                            <span class="button button--type_1 button--height_1">Заказать</span>
+                        </span>
                     </a>
                 </li>
-                <li class="tiles__item tiles__item--type_2">
-                    <a class="tile-link tile-link--type_1 tile-link--color_1" href="#">
-                        <img class="tile-link__icon" width="64" height="64" src="images/content/lab/icon_3.svg" alt="">
-                        <span class="tile-link__title">Высокая точность результатов</span>
+                <li class="tiles__item">
+                    <a class="tile-link tile-link--color_4 tile-link--type_1" href="#">
+                        <span class="tile-link__title">Санитарно-паразитологические исследования объектов окружающей среды:</span>
+                        <span class="tile-link__text">
+                            • Вода централизованных систем питьевого водоснабжения, питьевая вода из ёмкостей, вода из скважин, вода горячего водоснабжения, вода плавательных бассейнов и аквапарков, вода поверхностных водных объектов;<br>
+                            • Почва;<br>
+                            • Смывы с поверхностей и рук персонала.
+                        </span>
+                        <span class="tile-link__button-block">
+                            <span class="button button--type_1 button--height_1">Заказать</span>
+                        </span>
+                    </a>
+                </li>
+                <li class="tiles__item">
+                    <a class="tile-link tile-link--color_4 tile-link--type_1" href="#">
+                        <span class="tile-link__title">Измерение физических факторов в жилых и общественных зданиях, в производственных помещениях и на рабочих местах</span>
+                        <span class="tile-link__button-block">
+                            <span class="button button--type_1 button--height_1">Заказать</span>
+                        </span>
                     </a>
                 </li>
             </ul>
@@ -208,22 +205,6 @@
                         <li>Отправляем с курьером оригиналы протоколов.</li>
                     </ol>
                     <p class="two-lists__button-block"><button class="button button--type_1 button--height_4">Заказать</button></p>
-                </div>
-            </div>
-
-            <div class="infographic">
-                <div class="infographic__image-block"><img src="images/content/lab/infographic.svg" alt=""></div>
-                <div class="infographic__text-block">
-                    <h2>Система менеджмента</h2>
-                    <ul>
-                        <li>Участие в межлабораторных сличительных испытаниях (МСИ) у аккредитованных провайдеров;</li>
-                        <li>Внутрилабораторный контроль (ВЛК);</li>
-                        <li>Внешние и внутренние аудиты лаборатории;</li>
-                        <li>Плановое обучение и проверка работы персонала;</li>
-                        <li>Мониторинг технического обслуживания и исправности всего лабораторного парка;</li>
-                        <li>Автоматизированный контроль действующей нормативной документации;</li>
-                        <li>Резервное копирование и хранение всей входящей документации и протоколов исследований;</li>
-                    </ul>
                 </div>
             </div>
 
